# oblivious_node

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
.config/: nextest.toml
.github/workflows/: unit.yml
crates/eth_privatestate/: Cargo.toml
crates/eth_privatestate/src/: attestation.rs  authentication.rs  frontend.rs  lib.rs  main.rs  oblivious_node.rs  rpc.rs  rpc_admin.rs  state.rs  trie.rs  types.rs  utils.rs
crates/eth_privatestate/tests/: integration.rs
crates/eth_sync_feeder/: Cargo.toml
crates/eth_sync_feeder/src/: admin_rpc_sink.rs  lib.rs  main.rs  reth_rpc_source.rs  reth_source.rs
crates/eth_sync_feeder/tests/: integration.rs
deploy/: .env.tdx.example  Dockerfile.oblivious_node  docker-compose.tdx.yml
deploy/phala/: .env.app.example  .env.local.example  .env.registry.example  README.md  build_and_push_oblivious_node.sh  docker-compose.phase1.yml  docker-compose.phase3.sepolia.yml  merge_cvm_env.sh  verify_client_tdx.mjs  verify_tdx_quote.sh
